--- a/frontend/index.html
+++ b/frontend/index.html
@@ -40,55 +40,15 @@
     </header>
 
     <main>
-      <div class="item-list">
+      <!-- <div class="item-list">
         <div class="item-list__img"><img src="assets/photo.svg" /></div>
         <div class="item-list__info">
           <div class="item-list__info-title">게이밍 pc 팝니다</div>
           <div class="item-list__info-meta">역삼동 19초 전</div>
           <div class="item-list__info-price">100만원</div>
         </div>
-      </div>
-      <div class="item-list">
-        <div class="item-list__img"><img src="assets/photo.svg" /></div>
-        <div class="item-list__info">
-          <div class="item-list__info-title">게이밍 pc 팝니다</div>
-          <div class="item-list__info-meta">역삼동 19초 전</div>
-          <div class="item-list__info-price">100만원</div>
-        </div>
-      </div>
-      <div class="item-list">
-        <div class="item-list__img"><img src="assets/photo.svg" /></div>
-        <div class="item-list__info">
-          <div class="item-list__info-title">게이밍 pc 팝니다</div>
-          <div class="item-list__info-meta">역삼동 19초 전</div>
-          <div class="item-list__info-price">100만원</div>
-        </div>
-      </div>
-      <div class="item-list">
-        <div class="item-list__img"><img src="assets/photo.svg" /></div>
-        <div class="item-list__info">
-          <div class="item-list__info-title">게이밍 pc 팝니다</div>
-          <div class="item-list__info-meta">역삼동 19초 전</div>
-          <div class="item-list__info-price">100만원</div>
-        </div>
-      </div>
-      <div class="item-list">
-        <div class="item-list__img"><img src="assets/photo.svg" /></div>
-        <div class="item-list__info">
-          <div class="item-list__info-title">게이밍 pc 팝니다</div>
-          <div class="item-list__info-meta">역삼동 19초 전</div>
-          <div class="item-list__info-price">100만원</div>
-        </div>
-      </div>
-      <div class="item-list">
-        <div class="item-list__img"><img src="assets/photo.svg" /></div>
-        <div class="item-list__info">
-          <div class="item-list__info-title">게이밍 pc 팝니다</div>
-          <div class="item-list__info-meta">역삼동 19초 전</div>
-          <div class="item-list__info-price">100만원</div>
-        </div>
-      </div>
-      <div class="write-btn">+ 글쓰기</div>
+      </div> -->
+      <a class="write-btn" href="write.html">+ 글쓰기</a>
     </main>
 
     <footer>
@@ -115,5 +75,7 @@
         </div>
       </div>
     </footer>
+
+    <script src="index.js"></script>
   </body>
 </html>
