--- a/frontend/login.html
+++ b/frontend/login.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div>로그인</div>
-    <form id="login-form" action="/signup" method="POST">
+    <form id="login-form" action="/login" method="POST">
       <div>
         <label for="id">아이디</label>
         <input type="text" id="id" name="id" required />
@@ -17,9 +17,11 @@
         <input type="password" id="password" name="password" required />
       </div>
       <div>
-        <button type="submit">가입하기</button>
+        <button type="submit">로그인</button>
       </div>
+      <div id="info"></div>
     </form>
     <script src="login.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/js-sha256/0.9.0/sha256.min.js"></script>
   </body>
 </html>
